--- a/src/main/webapp/app/account/login/login.component.html
+++ b/src/main/webapp/app/account/login/login.component.html
@@ -1,21 +1,19 @@
-<div class="modal-header">
-    <h4 class="modal-title" jhiTranslate="login.title">Sign in</h4>
-    <button aria-label="Close" data-dismiss="modal" class="close" type="button" (click)="activeModal.dismiss('closed')"><span aria-hidden="true">x</span>
-    </button>
-</div>
-<div class="modal-body">
+<div>
     <div class="row justify-content-center">
         <div class="col-md-8">
+            <h1 jhiTranslate="login.title">Sign In</h1>
             <div class="alert alert-danger" *ngIf="authenticationError" jhiTranslate="login.messages.error.authentication">
                 <strong>Failed to sign in!</strong> Please check your credentials and try again.
             </div>
         </div>
+    </div>
+    <div class="row justify-content-center">
         <div class="col-md-8">
-            <form class="form" role="form" (ngSubmit)="login()">
+            <form name="form" role="form" (ngSubmit)="login()" #loginForm="ngForm">
                 <div class="form-group">
                     <label class="username-label" for="username" jhiTranslate="global.form.username">Login</label>
                     <input type="text" class="form-control" name="username" id="username" placeholder="{{'global.form.username.placeholder' | translate}}"
-                    [(ngModel)]="username">
+                           [(ngModel)]="username">
                 </div>
                 <div class="form-group">
                     <label for="password" jhiTranslate="login.form.password">Password</label>
@@ -28,6 +26,7 @@
                         <span jhiTranslate="login.form.rememberme">Remember me</span>
                     </label>
                 </div>
+                <div><p></p></div>
                 <button type="submit" class="btn btn-primary" jhiTranslate="login.form.button">Sign in</button>
             </form>
             <p></p>
