Fixing error from SNOR-17 and replacing images

--- a/src/main/webapp/app/admin/user-management/user-management-update.component.html
+++ b/src/main/webapp/app/admin/user-management/user-management-update.component.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="form-check">
                     <label class="form-check-label" for="activated">
-                        <input class="form-check-input" [disabled]="user.id === null" type="checkbox" id="activated" name="activated" [(ngModel)]="user.activated">
+                        <input class="form-check-input" [disabled]="user.login === null" type="checkbox" id="activated" name="activated" [(ngModel)]="user.activated">
                         <span jhiTranslate="userManagement.activated">Activated</span>
                     </label>
                 </div>
