--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -1,3 +1,6 @@
+/* ng-select theme */
+@import '~@ng-select/ng-select/themes/material.theme.css';
+
 /* ==============================================================
 Bootstrap tweaks
 ===============================================================*/
