--- a/src/main/webapp/app/pool/pool-booking/pool-booking.component.html
+++ b/src/main/webapp/app/pool/pool-booking/pool-booking.component.html
@@ -17,6 +17,30 @@
             Value should be greater than 0
         </small>
     </div>
+    <div>
+        <label jhiTranslate="pools.booking.fields.from">From</label>
+        <input type="datetime-local" class="form-control" name="from"
+               [(ngModel)]="from"><br />
+    </div>
+    <div>
+        <label jhiTranslate="pools.booking.fields.to">To</label>
+        <input type="datetime-local" class="form-control" name="to"
+               [(ngModel)]="to"><br />
+    </div>
+    <br>
+    <div class="form-group">
+        <label jhiTranslate="pools.booking.fields.tools">Additional tools</label>
+        <ng-select
+            [items]="tools | async"
+            [multiple]="true"
+            [closeOnSelect]="false"
+            [hideSelected]="true"
+            [searchable]="true"
+            bindLabel="name"
+            placeholder="Select tools"
+            [(ngModel)]="selectedTools">
+        </ng-select>
+    </div>
     <br>
     <div>
         <button class="btn btn-primary float-right" (click)="book()">
