--- a/src/main/webapp/app/upload/upload.component.html
+++ b/src/main/webapp/app/upload/upload.component.html
@@ -1,6 +1,8 @@
 <div class="row">
     <div class="col-md-12 upload">
         <h1 class="col-md-12" jhiTranslate="upload.title">Upload file with pools</h1>
+        <jhi-alert></jhi-alert>
+        <jhi-alert-error></jhi-alert-error>
         <div class="file-drop">
         <file-drop (onFileDrop)="dropped($event)"
                    contentClassName=""
