--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,6 @@
-<div class="footer">
-    <p jhiTranslate="footer">This is your footer</p>
+<div class="jh-footer">
+    <div class="text-center py-3">
+        <span class="jh-footer-copyright">© 2019 Copyright</span>
+        <a class="jh-footer-team-link" href="https://www.facebook.com/kuba.sroka.585">Snorlax Team</a>
+    </div>
 </div>
