--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -95,7 +95,7 @@
                     <li>
                         <a class="dropdown-item" routerLink="admin/statistics" routerLinkActive="active" (click)="collapseNavbar()">
                             <fa-icon icon="tasks" fixedWidth="true"></fa-icon>
-                            <span>Statistics</span>
+                            <span jhiTranslate="global.menu.admin.statistics">Statistics</span>
                         </a>
                     </li>
                     <li *ngIf="swaggerEnabled">
