--- a/src/main/webapp/app/admin/statistics/vm-statistics.component.html
+++ b/src/main/webapp/app/admin/statistics/vm-statistics.component.html
@@ -4,8 +4,8 @@
 
 <h2 class="col-md-12" jhiTranslate="statistics.vmStatistics"></h2>
 
-<div class="row">
-    <div class="form-group col-6">
+<div class="col-md-12 form-row align-items-end">
+    <div class="col-auto">
         <label for="vmStatisticsDateFrom" jhiTranslate="statistics.form.dateFrom"></label>
         <input
             type="date"
@@ -15,7 +15,7 @@
             (ngModelChange)="vmStatisticsDate.from = $event">
     </div>
 
-    <div class="form-group col-5">
+    <div class="col-auto">
         <label for="vmStatisticsDateTo" jhiTranslate="statistics.form.dateTo"></label>
         <input
             type="date"
@@ -24,11 +24,16 @@
             [ngModel] ="vmStatisticsDate.to | date:'yyyy-MM-dd'"
             (ngModelChange)="vmStatisticsDate.to = $event">
     </div>
-    <button
-        class="submit btn btn-primary col-1"
-        (click)="addVmStatisticsChart()"
-        jhiTranslate="statistics.form.add">
-    </button>
+
+    <div class="col-auto">
+        <button
+            class="submit btn btn-primary"
+            (click)="addVmStatisticsChart()"
+            jhiTranslate="statistics.form.add">
+        </button>
+    </div>
+
+
 </div>
 
 <div *ngFor="let chart of vmStatisticsCharts; let i = index" class="col-12">
@@ -50,17 +55,18 @@
 
 <h2 class="col-md-12" jhiTranslate="statistics.vmUserStatistics"></h2>
 
-<div class="row">
-    <div class="form-group col-6">
+<div class="col-md-12 form-row align-items-end">
+    <div class="col-auto">
         <label for="vmUserStatisticsDateFrom" jhiTranslate="statistics.form.dateFrom"></label>
         <input type="date"
+
                class="form-control"
                id="vmUserStatisticsDateFrom"
                [ngModel] ="vmUserStatisticsDate.from | date:'yyyy-MM-dd'"
                (ngModelChange)="vmUserStatisticsDate.from = $event">
     </div>
 
-    <div class="form-group col-5">
+    <div class="col-auto">
         <label for="vmUserStatisticsDateTo" jhiTranslate="statistics.form.dateTo"></label>
         <input type="date"
                class="form-control"
@@ -68,11 +74,13 @@
                [ngModel] ="vmUserStatisticsDate.to | date:'yyyy-MM-dd'"
                (ngModelChange)="vmUserStatisticsDate.to = $event">
     </div>
-    <button
-        class="submit btn btn-primary col-1"
-        (click)="addVmUserStatisticsChart()"
-        jhiTranslate="statistics.form.add">
-    </button>
+    <div class="col-auto">
+        <button
+            class="submit btn btn-primary"
+            (click)="addVmUserStatisticsChart()"
+            jhiTranslate="statistics.form.add">
+        </button>
+    </div>
 </div>
 
 <div *ngFor="let chart of vmUserStatisticsCharts; let i = index" class="col-12">
