--- a/src/main/webapp/app/pool/pool-booking/pool-booking.component.html
+++ b/src/main/webapp/app/pool/pool-booking/pool-booking.component.html
@@ -6,12 +6,12 @@
     <jhi-alert-error></jhi-alert-error>
     <div class="form-group" [hidden]="!reservationPoolId">
         <label for="id" jhiTranslate="pools.booking.fields.id">ID</label>
-        <input type="text" class="form-control" name="id"
+        <input type="text" class="form-control" name="id" id="id"
                [ngModel]="reservationPoolId" readonly>
     </div>
     <div>
         <label for="count" jhiTranslate="pools.booking.fields.count">Count</label>
-        <input type="number" class="form-control" name="count"
+        <input type="number" class="form-control" name="count" id="count"
                [(ngModel)]="count" min="1">
         <small *ngIf="count<1" jhiTranslate="pools.booking.minvalue" class="form-text text-danger">
             Value should be greater than 0
@@ -19,7 +19,7 @@
     </div>
     <br>
     <div class="form-group">
-        <label jhiTranslate="pools.booking.fields.tools">Additional tools</label>
+        <label jhiTranslate="pools.booking.fields.tools.label">Additional tools</label>
         <ng-select
             [items]="tools | async"
             [multiple]="true"
@@ -27,13 +27,13 @@
             [hideSelected]="true"
             [searchable]="true"
             bindLabel="name"
-            placeholder="Select tools"
+            placeholder="{{'pools.booking.fields.tools.placeholder' | translate}}"
             [(ngModel)]="selectedTools">
         </ng-select>
     </div>
     <br>
     <ngb-tabset type="pills" justify="fill" activeId="once" (tabChange)="setActiveTab($event)">
-        <ngb-tab title="Once" id="once" jhiTranslate="pools.booking.fields.once.tabName">
+        <ngb-tab title="{{'pools.booking.fields.once.tabName' | translate}}"  id="once">
             <ng-template ngbTabContent>
                 <div class="row tab-pane-inside">
                     <div class="col-md-6">
@@ -86,7 +86,7 @@
                 </div>
             </ng-template>
         </ngb-tab>
-        <ngb-tab title="Weekly" id="weekly" jhiTranslate="pools.booking.fields.once.tabName">
+        <ngb-tab title="{{'pools.booking.fields.weekly.tabName' | translate}}" id="weekly">
             <ng-template ngbTabContent>
                 <div class="row tab-pane-inside">
                     <div class="col-md-6">
@@ -130,7 +130,7 @@
                             <div class="col-md-6">
                                 <div>
                                     <label for="weeks" jhiTranslate="pools.booking.fields.weekly.weeks">Weeks</label>
-                                    <input type="number" class="form-control" name="weeks"
+                                    <input type="number" class="form-control" name="weeks" id="weeks"
                                            [(ngModel)]="weeks" min="1" (ngModelChange)="handelWeekChange($event)">
                                     <small *ngIf="weeks<0" jhiTranslate="pools.booking.minvalue"
                                            class="form-text text-danger">
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label jhiTranslate="pools.booking.fields.weekly.excludedDates">Excluded dates</label>
+                    <label jhiTranslate="pools.booking.fields.weekly.excludedDates.label">Excluded dates</label>
                     <ng-select
                         [items]="possibleDates"
                         [multiple]="true"
@@ -161,7 +161,7 @@
                         [hideSelected]="true"
                         [searchable]="true"
                         bindLabel="name"
-                        placeholder="Dates to exclude"
+                        placeholder="{{'pools.booking.fields.tools.weekly.excludedDates.placeholder' | translate}}"
                         [(ngModel)]="excludedDates">
                     </ng-select>
                 </div>
